bank-app/k8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bank-app-blue
  namespace: bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: blue

  template:
    metadata:
      labels:
        app: blue

    spec:
      containers:
      - name: bank-app

        image: 432004896257.dkr.ecr.ap-south-2.amazonaws.com/bank-app:IMAGE_TAG

        ports:
        - containerPort: 3000

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
