bank-app/k8s/service-green.yaml
apiVersion: v1
kind: Service

metadata:
  name: bank-service-green
  namespace: bank

spec:
  type: ClusterIP

  selector:
    app: green

  ports:
  - port: 80
    targetPort: 3000
